Removed redoc in favour of Swagger again, added documentation, refined tooling and Docker Compose deployment script
