# src/api/routes.ts
@@ -38,13 +38,13 @@ const models: TsoaRoute.Models = {
     "Board": {
         "dataType": "refObject",
         "properties": {
-            "id": {"ref":"ObjectId"},
-            "latitude": {"dataType":"double","required":true},
-            "longitude": {"dataType":"double","required":true},
+            "_id": {"ref":"ObjectId","required":true},
+            "latitude": {"dataType":"float","required":true,"validators":{"minimum":{"value":-90},"maximum":{"value":90}}},
+            "longitude": {"dataType":"float","required":true,"validators":{"minimum":{"value":-180},"maximum":{"value":180}}},
             "accessibility": {"ref":"Accessibility","required":true},
             "material": {"ref":"Material","required":true},
             "size": {"ref":"Size","required":true},
-            "traffic": {"dataType":"double","required":true},
+            "traffic": {"dataType":"integer","required":true,"validators":{"minimum":{"value":1},"maximum":{"value":5}}},
             "type": {"ref":"Type","required":true},
             "created": {"dataType":"datetime","required":true},
             "modified": {"dataType":"datetime","required":true},
@@ -55,13 +55,13 @@ const models: TsoaRoute.Models = {
     "Filter": {
         "dataType": "refObject",
         "properties": {
-            "accessibility": {"dataType":"array","array":{"dataType":"refEnum","ref":"Accessibility"}},
-            "material": {"dataType":"array","array":{"dataType":"refEnum","ref":"Material"}},
-            "size": {"dataType":"array","array":{"dataType":"refEnum","ref":"Size"}},
-            "traffic": {"dataType":"array","array":{"dataType":"double"}},
-            "type": {"dataType":"array","array":{"dataType":"refEnum","ref":"Type"}},
-            "latitude": {"dataType":"array","array":{"dataType":"double"}},
-            "longitude": {"dataType":"array","array":{"dataType":"double"}},
+            "accessibility": {"dataType":"array","array":{"dataType":"refEnum","ref":"Accessibility"},"validators":{"maxItems":{"value":3},"uniqueItems":{"errorMsg":"true"}}},
+            "material": {"dataType":"array","array":{"dataType":"refEnum","ref":"Material"},"validators":{"maxItems":{"value":5},"uniqueItems":{"errorMsg":"true"}}},
+            "size": {"dataType":"array","array":{"dataType":"refEnum","ref":"Size"},"validators":{"maxItems":{"value":3},"uniqueItems":{"errorMsg":"true"}}},
+            "traffic": {"dataType":"array","array":{"dataType":"integer"},"validators":{"minimum":{"value":1},"maximum":{"value":5},"uniqueItems":{"errorMsg":"true"}}},
+            "type": {"dataType":"array","array":{"dataType":"refEnum","ref":"Type"},"validators":{"maxItems":{"value":5},"uniqueItems":{"errorMsg":"true"}}},
+            "latitude": {"dataType":"array","array":{"dataType":"double"},"validators":{"minItems":{"value":2},"maxItems":{"value":2},"minimum":{"value":-90},"maximum":{"value":90}}},
+            "longitude": {"dataType":"array","array":{"dataType":"double"},"validators":{"minItems":{"value":2},"maxItems":{"value":2},"minimum":{"value":-180},"maximum":{"value":180}}},
         },
         "additionalProperties": false,
     },
@@ -87,7 +87,7 @@ export function RegisterRoutes(app: express.Router) {
 
             function BoardsController_filterBoards(request: any, response: any, next: any) {
             const args = {
-                    requestBody: {"in":"body","name":"requestBody","required":true,"ref":"Filter"},
+                    filter: {"in":"body","name":"filter","required":true,"ref":"Filter"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
@@ -138,7 +138,7 @@ export function RegisterRoutes(app: express.Router) {
             function BoardsController_updateBoard(request: any, response: any, next: any) {
             const args = {
                     boardId: {"in":"path","name":"boardId","required":true,"dataType":"string"},
-                    newBoard: {"in":"body","name":"newBoard","required":true,"ref":"Board"},
+                    board: {"in":"body","name":"board","required":true,"ref":"Board"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
